--- a/AnyClient/AndroidManifest.xml
+++ b/AnyClient/AndroidManifest.xml
@@ -6,6 +6,9 @@
 
     <uses-sdk android:minSdkVersion="7" />
 
+    <uses-permission android:name="com.turkcell.tc.permission.ACCESS_SERVICE" />
+    <uses-permission android:name="com.turkcell.tc.permission.ACCESS_SERVICE_ASYNC" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
